--- a/index.html
+++ b/index.html
@@ -3,14 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Uniform Button Size</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            gap: 10px;
+            background-color: #f4f4f4;
+            font-family: Arial, sans-serif;
+        }
+
+        .button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #0073e6;
+            color: white;
+            border: none;
+            padding: 12px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            border-radius: 8px;
+            transition: background-color 0.3s;
+            text-decoration: none;
+            width: 250px; /* Ensuring equal width */
+            height: 60px; /* Ensuring equal height */
+        }
+
+        .button img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 10px;
+            flex-shrink: 0;
+        }
+
+        .button span {
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .button:hover {
+            background-color: #005bb5;
+        }
+    </style>
 </head>
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Anil_Kumble_%281%29.jpg/330px-Anil_Kumble_%281%29.jpg" alt="">
-     <a href="https://en.wikipedia.org/wiki/Anil_Kumble">Anil Kumble</a>
-     <h2>Anil Kumble</h2>
-     <p>Anil Kumble (pronunciationⓘ; born 17 October 1970) is a former Indian cricketer, coach and commentator who played Test and One Day International cricket for his national team over an international career of 18 years.[1] A right-arm leg spin bowler,[2] regarded as one of the greatest bowlers in cricket history,[3][4] he took 619 wickets in Test cricket and was the third-highest wicket taker of all time at the time of his retirement in 2008.
 
-        Born in Bangalore, Mysore State (now Karnataka), Kumble developed an early interest in cricket as he grew up watching players like B. S. Chandrasekhar before becoming a full-fledged cricketer. He made his first-class debut at the age of 19 while representing Karnataka. Soon he was picked up for the Austral-Asia Cup in 1990 before making his Test debut against England later that year. Since then, he played 132 Test matches and was responsible for many of India's victories. In 1999, while playing against Pakistan, Kumble dismissed all ten batsmen in a Test match innings, joining England's Jim Laker as the second player to achieve the feat.[5][6][7] He became a part of the regular ODI team during the early 1990s and had some of the best performances during this time. The year 1996 proved to very successful for him as he was selected for the World Cup and emerged as the most successful bowler of the tournament, taking 15 wickets in seven matches at an average of 18.73.</p>
+    <a href="https://en.wikipedia.org/wiki/Virat_Kohli" target="_blank" class="button">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Virat_Kohli_during_the_India_vs_Aus_4th_Test_match_at_Narendra_Modi_Stadium_on_09_March_2023.jpg/330px-Virat_Kohli_during_the_India_vs_Aus_4th_Test_match_at_Narendra_Modi_Stadium_on_09_March_2023.jpg" alt="Virat Kohli">
+        <span>Virat Kohli</span>
+    </a>
+
+    <a href="https://en.wikipedia.org/wiki/Bhuvneshwar_Kumar" target="_blank" class="button">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Bhuvneshwar_kumar_With_Rashid_Zirak_%28Bhuvneshwar_Kumar_cropped%29.jpg/800px-Bhuvneshwar_kumar_With_Rashid_Zirak_%28Bhuvneshwar_Kumar_cropped%29.jpg" alt="Bhuvneshwar Kumar">
+        <span>Bhuvneshwar Kumar</span>
+    </a>
+
+    <a href="https://en.wikipedia.org/wiki/S._P._Balasubrahmanyam" target="_blank" class="button">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/S._P._Balasubrahmanyam_at_the_%27Gurkha%27_Audio_Launch.jpg/1024px-S._P._Balasubrahmanyam_at_the_%27Gurkha%27_Audio_Launch.jpg" alt="S P Balasubrahmanyam">
+        <span>S P Balasubrahmanyam</span>
+    </a>
+
+    <a href="https://en.wikipedia.org/wiki/Rahul_Dravid" target="_blank" class="button">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Rahul_Dravid_in_2024.jpg" alt="Rahul Dravid">
+        <span>Rahul Dravid</span>
+    </a>
+
 </body>
 </html>
+
+
+
